--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,42 +1,85 @@
-body{
-    background:url("http://blog.hdwallsource.com/wp-content/uploads/2016/01/train-track-wallpapers-37967-38837-hd-wallpapers.jpg");
+
+body {
+    background:url("https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/Gare_Du_Nord_Interior%2C_Paris%2C_France_-_Diliff.jpg/1280px-Gare_Du_Nord_Interior%2C_Paris%2C_France_-_Diliff.jpg");
   }
+
+  .container {background-color: rgba(255,255,255,0.5) !important
+  }
+
   .jumbotron{
-    background-color:#efffff;
-    color:black;
-    border:5px grey solid;
+    margin-top: 20px;
+    /* background-color: rgba(0, 0, 0, 0) */
+    border:2.5px grey solid;
+    background-color: rgba(255,255,255,0.5) !important;
+    /* background-color:#efffff; */
+    color: rgba(228, 91, 28, 0.993);
   font: 2em Arial,sans-serif;
   }
+
   .ride{
     font-size:40px;
-    color:blue;
+    color:rgba(228, 91, 28, 0.993);
   }
-  
+  /* .row {background-color: rgba(255,255,255,0.5) !important;
+  }  */
+  /* div  .container div.container table tr td, table tr th .entryform .form-group .panel.panel-primary .panel-heading .panel-body .row 
+  .col-lg-12 div.panel-body {background-color: rgba(255,255,255,0.5); opacity: 0.5
+      !important;
+} */
+/*   
+panel.panel-primary {background-color: rgba(255,255,255,0.5) !important;
+}  */
+/* form.entryform {background-color: rgba(255,255,255,0.5) !important;
+}  */
+/* .col-lg-12 {background-color: rgba(255,255,255,0.5) !important
+} */
+
   .panel-body{
-    border:5px grey solid;
+    /* background-color: rgba(255,255,255,0.5) !important; */
+    border:2.5px grey solid;
   }
   .current ,.add{
-    background-color:peachpuff;
+    background-color:rgb(245, 200, 160);
     color:black;
     font-size:20px;
   }
+
+.panel-transparent { background-color: rgba(255,255,255,0.5) !important;}
+
+
   #trainTable{
-    background-color:#efffff;
+    /* background-color: rgba(0, 0, 0, 0) */
+    /* background-color: rgba(255,255,255,0.5) !important; */
+    /* background-color:#efffff; */
+    /* background-color: transparent !important; */
+    /* zoom: 1;
+filter: alpha(opacity=50);
+opacity: 0.5; */
     color:black;
     font-size:20px;
     font: bold;
   }
-  #trainNameInput,#destinationInput,#timeInput,#frequencyInput{
+
+.entryform {background-color: rgba(255,255,255,0.5) !important;
+}
+
+  #trainNameInput, #destinationInput, #timeInput, #frequencyInput{
     color:black;
     font-size:18px;
-    background-color:#efffff;
+    background-color: rgba(255,255,255,0.5) !important;
   }
   .form-group{
+    /* background-color:#efffff; */
+    /* background-color: transparent; */
+    /* background-color: rgba(255,255,255,0.5) !important; */
+
     color: black;
     font-size:20px;
   }
+
   .btn{
-    background-color:green;
+    background-color:rgb(0, 66, 128);
     font-size:20px;
   }
   
+
